# saccade

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
configs/: bench_ssv2.yaml  vitb.yaml  vitl.yaml
scripts/: bench_fused_attn.py  bench_surprise_gate.py  demo.py  make_figures.py  real_eval.py  verify_rope.py
src/saccade/: __init__.py  adaptive_compute.py  benchmark.py  config.py  data.py  distill.py  export.py  metrics.py  model.py  pipeline.py  predictability_drop.py  quantize.py  robustness.py  token_reduction.py
src/saccade/streaming/: __init__.py  causal_attention.py  lora_causal.py  state_cache.py  streaming_encoder.py  surprise_gate.py
tests/: __init__.py  conftest.py  test_block_causal_mask.py  test_config.py  test_state_cache.py  test_streaming_encoder.py  test_surprise_gate.py
